# solana-multi-sender

./: Cargo.toml  README.md  payment_addresses.txt
src/: main.rs
