[package]
name = "solana-multi-sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
helius = {git = "https://github.com/helius-labs/helius-rust-sdk", branch = "main"}
solana-sdk = "1.18.12"
tokio = "1.39.2"
solana-client = "1.18.12"
rand = "0.8.5"
